--- a/Car Dealership/Properties/launchSettings.json
+++ b/Car Dealership/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5168;https://localhost:7196",
+      "applicationUrl": "https://localhost:7196;http://localhost:5168",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
