--- a/Car Dealership/appsettings.json
+++ b/Car Dealership/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS; Database=car-Dealership; Trusted_Connection=True; TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
